tests/interpreter/errors/divide_by_zero.err
error[I012]: division by zero
  --> tests/interpreter/errors/divide_by_zero.mochi:1:11

  1 | let x = 1 / 0
    |           ^

help:
  Ensure the denominator is not zero.